--- a/barra/masrentados.html
+++ b/barra/masrentados.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Más Rentados - CUATRO OJOS</title>
-  <link rel="stylesheet" href="a../css/masrentados.css">
+  <link rel="stylesheet" href="../css/masrentados.css">
 </head>
 <body>
   <header>
